[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-from-scratch"
version = "1.0.0"
description = "Low-Rank Adaptation (LoRA) implemented from first principles for parameter-efficient fine-tuning of transformer language models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Harsh Raj Singh"},
]
keywords = ["lora", "parameter-efficient", "fine-tuning", "transformers", "gpt2", "low-rank-adaptation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
include = ["lora_from_scratch*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
